--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   div(class = 'special')
     h1 Avast task
     ul
-      li(float ) get current time (Unix epoch in milliseconds)
-      li get first N bytes of a file
-      li get content of an URL
+      li Get current time (Unix epoch in milliseconds)
+      li Get first N bytes of a file
+      li Get content of an URL
 
