--- a/views/unixTime.pug
+++ b/views/unixTime.pug
@@ -2,5 +2,5 @@ extends layout
 
 block content
     div(class = 'special')
-        h1 Task: Get current time (UNIX epoch in milliseconds)
+        h1 Task: Get current time
         p1 This is the UNIX timestamp: #{time}
