--- a/views/contentOfURL.pug
+++ b/views/contentOfURL.pug
@@ -4,5 +4,5 @@ block content
     div(class = 'special')
         h1 Task: Get content of URL
         p This is my way of implementing this task.
-        p Below is the content (anything after '/') in italic:
+        p Below is the content (text after '/') in italic:
         i= output
