light text changes

--- a/views/contentOfURL.pug
+++ b/views/contentOfURL.pug
@@ -3,6 +3,5 @@ extends layout
 block content
     div(class = 'special')
         h1 Task: Get content of URL
-        p This is my way of implementing this task.
-        p Below is the content (text after '/') in italic:
+        p Below is the content of the URL (text after '/'):
         i= output
